[gd_scene load_steps=6 format=3 uid="uid://cssuq28x3u6al"]

[ext_resource type="Texture2D" uid="uid://ww1n2psxdc7d" path="res://assets/intermission/intermission-bg.png" id="1_1v0qt"]
[ext_resource type="Script" uid="uid://culvneiglg67c" path="res://Scenes/intermission.gd" id="1_7n2v1"]
[ext_resource type="Texture2D" uid="uid://f64qvcbn7dv0" path="res://Assets/intermission/intermission-protag-00.png" id="3_0on0q"]
[ext_resource type="Texture2D" uid="uid://diww8qfxnv3hr" path="res://Assets/intermission/intermission-protag-01.png" id="4_jdd66"]
[ext_resource type="Texture2D" uid="uid://ct73t4ldji1lt" path="res://Assets/intermission/intermission-protag-02.png" id="5_380xh"]

[node name="Intermission" type="Node2D"]
script = ExtResource("1_7n2v1")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_1v0qt")

[node name="IntermissionProtag00" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_0on0q")

[node name="IntermissionProtag01" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_jdd66")

[node name="IntermissionProtag02" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_380xh")

[node name="Black" type="ColorRect" parent="."]
visible = false
offset_left = -220.0
offset_top = -907.0
offset_right = 932.0
offset_bottom = -259.0
color = Color(0, 0, 0, 1)
